...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/color_picker_color_rgb_textview_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/color_red"
                android:textColor="@color/paintstudio_color_picker_rgb_red"
                android:paddingStart="0dp"
                android:paddingEnd="5dp" />

            <SeekBar
                android:id="@+id/color_picker_color_rgb_seekbar_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:max="255" />

            <TextView
                android:id="@+id/color_picker_rgb_red_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:gravity="center_vertical|end"
                android:text="255"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/color_picker_color_rgb_textview_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/color_green"
                android:textColor="@color/paintstudio_color_picker_rgb_green"
                android:paddingStart="0dp"
                android:paddingEnd="5dp" />

            <SeekBar
                android:id="@+id/color_picker_color_rgb_seekbar_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="255" />

            <TextView
                android:id="@+id/color_picker_rgb_green_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:gravity="center_vertical|end"
                android:text="255"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/color_picker_color_rgb_textview_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/color_blue"
                android:textColor="@color/paintstudio_color_picker_rgb_blue"
                android:paddingStart="0dp"
                android:paddingEnd="5dp" />

            <SeekBar
                android:id="@+id/color_picker_color_rgb_seekbar_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="255" />

            <TextView
                android:id="@+id/color_picker_rgb_blue_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_span="2"
                android:gravity="center_vertical|end"
                android:text="255"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/color_picker_color_rgb_textview_alpha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/color_alpha"
                android:textColor="@color/paintstudio_color_picker_rgb_alpha"
                android:paddingStart="0dp"
                android:paddingEnd="5dp" />

            <SeekBar
                android:id="@+id/color_picker_color_rgb_seekbar_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255" />

            <TextView
                android:id="@+id/color_picker_rgb_alpha_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|end"
                android:text="100"
                android:textColor="?attr/colorAccent"
...
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/color_hex"
                android:textColor="@color/paintstudio_color_picker_hex_black" />

            <EditText
                android:id="@+id/color_picker_color_rgb_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="#"
                android:inputType="textNoSuggestions"
                android:maxLength="18"
...
