<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_picker_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
...
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                app:strokeColor="@color/paintstudio_color_picker_separation_color"
                app:strokeWidth="2dp">

                <View
                    android:id="@+id/color_picker_current_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start" />

                <View
                    android:id="@+id/color_picker_new_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
...

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:id="@+id/color_picker_pipette_btn"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/paintstudio_color_picker_btn_color"
                android:text="@string/color_picker_pipette"
                app:icon="@drawable/ic_color_picker_pipette"
                app:iconGravity="textStart"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

...
